--- a/page.hbs
+++ b/page.hbs
@@ -49,14 +49,16 @@
 
 <section>
     <div class="letterInfo">
+        {{#letterInfo}}
         <div class="flag"><label><input type="checkbox"/></label></div>
         <div class="star"><img src="style/img/star.png"></div>
-        <div class="fromWho">LiveJournal</div>
-        <div class="letterTheme">govori_slushai оновив/оновила свій журнал!</div>
+        <div class="fromWho">{{fromWho}}</div>
+        <div class="letterTheme">{{letterTheme}}</div>
         <div class="a-w">
-            <div class="addOns"><img src="style/img/blank.png"></div>
-            <div class="whenDate">11:23</div>
+            <div class="addOns"><img src="{{addOns}}"></div>
+            <div class="whenDate">{{whenDate}}</div>
         </div>
+        {{/letterInfo}}
     </div>
     <footer>
         <div id="usingMemory">
