Created first block.

--- a/page.hbs
+++ b/page.hbs
@@ -1,8 +1,4 @@
-<nav class="mainNav">
-    {{#mainMenu}}
-        <a href="{{url}}"> {{label}} </a>
-    {{/mainMenu}}
-</nav>
+<div id="commonGoogleNav"></div>
 
 <div class="googleMenu">
     <a id="logo" href="https://mail.google.com/mail/u/0/?shva=1#inbox"><img src="style/img/logo.png"/></a>
