--- a/blocks/footer/footer.hbs
+++ b/blocks/footer/footer.hbs
@@ -1,6 +1,6 @@
 <div id="usingMemory">
     <b>Використано {{usingMemoryPercent}}%</b><br/>
-    usingMemorySize 0,1 Гб з {{memorySize}} Гб
+   {{usingMemorySize}} 0,1 Гб з {{memorySize}} Гб
 </div>
 
 <div id="copyright">
