added new block letter content

--- a/blocks/mailFilters/mailFilters.hbs
+++ b/blocks/mailFilters/mailFilters.hbs
@@ -1,4 +1,4 @@
-<button type="button" id="writeButton"><img src="style/img/write.png"/></button><br/>
+<button type="button" id="writeButton"><img src="style/img/write.png"/></button>
 <nav class="letterNav">
     {{#letterNav}}
         <a href="{{url}}"> {{label}} </a><br/>
