--- a/blocks/search/search.hbs
+++ b/blocks/search/search.hbs
@@ -7,7 +7,7 @@
     </form>
 
     <div class="plusmenu">
-        <span><a id="user" href="https://plus.google.com/u/0/115239898719183516051/posts"> {{user}} </a></span>
+        <a id="user" href="https://plus.google.com/u/0/115239898719183516051/posts"> {{user}} </a>
         <button type="button" title="Сповіщення"><img src="style/img/notification.png"/></button>
         <a href="https://plus.google.com/u/0/?hl=uk"><img src="style/img/share.png"></a>
         <a href="https://plus.google.com/u/0/115239898719183516051/posts"><img src="{{photo}}"/></a>
