--- a/blocks/gNavigation/gNavigation.hbs
+++ b/blocks/gNavigation/gNavigation.hbs
@@ -1,5 +1,5 @@
 <nav class="mailNav">
-    <button type="button" id="gmailLogo"><img src="style/img/gmail.png"/></button>
+    <button type="button" id="gmailLogo">Gmail</button>
     <div class="letterOption">
         <button type="button" title="Вибрати"><img src="style/img/choose.png"/></button>
         <button type="button" title="Оновити"><img src="style/img/restore.png"/></button>
