--- a/blocks/gNavigation/gNavigation.hbs
+++ b/blocks/gNavigation/gNavigation.hbs
@@ -1,5 +1,6 @@
 <nav class="mailNav">
-    <button type="button" id="gmailLogo">Gmail</button>
+    <a id="gmailLogo" href="#">Gmail
+    <span ></span></a>
     <div class="letterOption">
         <button type="button" title="Вибрати"><img src="style/img/choose.png"/></button>
         <button type="button" title="Оновити"><img src="style/img/restore.png"/></button>
