--- a/blocks/mailFilters/mailFilters.hbs
+++ b/blocks/mailFilters/mailFilters.hbs
@@ -1,7 +1,7 @@
-<button type="button" id="writeButton"><img src="style/img/write.png"/></button>
+<button class="theButton"></button>
 <nav class="letterNav">
     {{#letterNav}}
         <a href="{{url}}"> {{label}} </a><br/>
     {{/letterNav}}
 </nav>
-<a href="#" id="chat"><img src="style/img/chat.png" title="Чат"/></a>
+<span id="chat" title="Чат" content=" "></span>
