--- a/blocks/mailList/mailList.hbs
+++ b/blocks/mailList/mailList.hbs
@@ -2,7 +2,7 @@
     <div class="letterInfo">
 
         <div class="flag"><label><input type="checkbox"/></label></div>
-        <div class="star"><img src="style/img/star.png"></div>
+        <div class="star"><img src="img/star4.png"></div>
         <div class="fromWho">{{fromWho}}</div>
         <div class="letterTheme">{{letterTheme}}</div>
         <div class="a-w">
